--- a/noonno/real-test.html
+++ b/noonno/real-test.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="Keywords" content="" />
+  <meta name="Description" content="" />
+  <meta name="Robots" content="" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>리얼테스트</title>
 </head>
 
