--- a/noonno/html/guide/guide_test.html
+++ b/noonno/html/guide/guide_test.html
@@ -23,7 +23,7 @@
         <div class="search_teach">
           <ul>
             <li>눈높이</li>
-            <li><a href="#" title="search_teach">선생님 소개1</a></li>
+            <li><a href="#" title="search_teach">선생님 소개1배포</a></li>
             <li><a href="#" title="search_teach">선생님 모집</a></li>
             <li><a href="#" title="search_teach">선생님 찾기</a></li>
 
