--- a/noonno/html/community/news_notice.html
+++ b/noonno/html/community/news_notice.html
@@ -42,7 +42,7 @@
             <li>
               <a href="" class="board">
                 <div class="thumb">
-                  <img src="../../resource/img/Rectangle 91.png" alt="">
+                  <img src="../../resource/img/Rectangle 91-1.png" alt="">
                 </div>
                 <div class="info">
                   <h3 class="board">세상에서 가장 큰 학교가 찐쌤을 찾습니다!</h3>
@@ -53,7 +53,7 @@
             <li>
               <a href="" class="board">
                 <div class="thumb">
-                  <img src="../../resource/img/Rectangle 91.png" alt="">
+                  <img src="../../resource/img/Rectangle 91-2.png" alt="">
                 </div>
                 <div class="info">
                   <h3 class="board">세상에서 가장 큰 학교가 찐쌤을 찾습니다!</h3>
@@ -64,7 +64,7 @@
             <li>
               <a href="" class="board">
                 <div class="thumb">
-                  <img src="../../resource/img/Rectangle 91.png" alt="">
+                  <img src="../../resource/img/Rectangle 91-3.png" alt="">
                 </div>
                 <div class="info">
                   <h3 class="board">세상에서 가장 큰 학교가 찐쌤을 찾습니다!</h3>
@@ -75,7 +75,7 @@
             <li>
               <a href="" class="board">
                 <div class="thumb">
-                  <img src="../../resource/img/Rectangle 91.png" alt="">
+                  <img src="../../resource/img/Rectangle 91-4.png" alt="">
                 </div>
                 <div class="info">
                   <h3 class="board">세상에서 가장 큰 학교가 찐쌤을 찾습니다!</h3>
@@ -86,7 +86,7 @@
             <li>
               <a href="" class="board">
                 <div class="thumb">
-                  <img src="../../resource/img/Rectangle 91.png" alt="">
+                  <img src="../../resource/img/Rectangle 91-5.png" alt="">
                 </div>
                 <div class="info">
                   <h3 class="board">세상에서 가장 큰 학교가 찐쌤을 찾습니다!</h3>
@@ -97,7 +97,7 @@
             <li>
               <a href="" class="board">
                 <div class="thumb">
-                  <img src="../../resource/img/Rectangle 91.png" alt="">
+                  <img src="../../resource/img/Rectangle 91-6.png" alt="">
                 </div>
                 <div class="info">
                   <h3 class="board">세상에서 가장 큰 학교가 찐쌤을 찾습니다!</h3>
@@ -108,7 +108,7 @@
             <li>
               <a href="" class="board">
                 <div class="thumb">
-                  <img src="../../resource/img/Rectangle 91.png" alt="">
+                  <img src="../../resource/img/Rectangle 91-7.png" alt="">
                 </div>
                 <div class="info">
                   <h3 class="board">세상에서 가장 큰 학교가 찐쌤을 찾습니다!</h3>
