--- a/noonno/html/community/event_list.html
+++ b/noonno/html/community/event_list.html
@@ -18,7 +18,7 @@
     <div class="content">
       <!-- 커뮤니티 - 뉴스,공지 -->
       <div class="inner">
-        <h2 class="sub-tit">눈높이소식</h2>
+        <h2 class="sub-tit">이벤트</h2>
         <div class="board-search">
           <form action="" name="">
             <input name="" value="" autocomplete="off" placeholder="검색어를 입력해주세요">
@@ -26,12 +26,12 @@
           </form>
         </div>
         <div class="board-wrap">
-          <p class="total-num">전체<span>32</span>건</p>
+          <p class="total-num">전체<span>14</span>건</p>
           <ul class="board-box board-gallery">
             <li>
               <a href="" class="board">
                 <div class="thumb">
-                  <img src="../../resource/img/Rectangle 91.png" alt="">
+                  <img src="../../resource/img/Rectangle 91-7.png" alt="">
                 </div>
                 <div class="info">
                   <h3 class="board-tit">세상에서 가장 큰 학교가 찐쌤을 찾습니다!</h3>
@@ -40,9 +40,9 @@
               </a>
             </li>
             <li>
-              <a href="" class="board">
+              <a href="./news_notice_view.html" class="board">
                 <div class="thumb">
-                  <img src="../../resource/img/Rectangle 91-1.png" alt="">
+                  <img src="../../resource/img/Rectangle 91-6.png" alt="">
                 </div>
                 <div class="info">
                   <h3 class="board-tit">2019 더불어배우다 연차보고서 e-book 발간소식 안내</h3>
@@ -53,7 +53,7 @@
             <li>
               <a href="" class="board">
                 <div class="thumb">
-                  <img src="../../resource/img/Rectangle 91-2.png" alt="">
+                  <img src="../../resource/img/Rectangle 91-5.png" alt="">
                 </div>
                 <div class="info">
                   <h3 class="board-tit">트라움 감성 체험전 '우당탕탕 아빠가 만든 놀이터'</h3>
@@ -64,7 +64,7 @@
             <li>
               <a href="" class="board">
                 <div class="thumb">
-                  <img src="../../resource/img/Rectangle 91-3.png" alt="">
+                  <img src="../../resource/img/Rectangle 91-4.png" alt="">
                 </div>
                 <div class="info">
                   <h3 class="board-tit">눈높이예스클래스, 써밋 수학 coming   soon!</h3>
@@ -75,7 +75,7 @@
             <li>
               <a href="" class="board">
                 <div class="thumb">
-                  <img src="../../resource/img/Rectangle 91-4.png" alt="">
+                  <img src="../../resource/img/Rectangle 91-3.png" alt="">
                 </div>
                 <div class="info">
                   <h3 class="board-tit">아빠도 한 눈높이국어</h3>
@@ -86,7 +86,7 @@
             <li>
               <a href="" class="board">
                 <div class="thumb">
-                  <img src="../../resource/img/Rectangle 91-5.png" alt="">
+                  <img src="../../resource/img/Rectangle 91-2.png" alt="">
                 </div>
                 <div class="info">
                   <h3 class="board-tit">'까칠한 아이' 오디오북 전자책 출시!</h3>
@@ -97,7 +97,7 @@
             <li>
               <a href="" class="board">
                 <div class="thumb">
-                  <img src="../../resource/img/Rectangle 91-6.png" alt="">
+                  <img src="../../resource/img/Rectangle 91-1.png" alt="">
                 </div>
                 <div class="info">
                   <h3 class="board-tit">언제나 우리의 선택은 눈높이수학</h3>
@@ -108,7 +108,7 @@
             <li>
               <a href="" class="board">
                 <div class="thumb">
-                  <img src="../../resource/img/Rectangle 91-7.png" alt="">
+                  <img src="../../resource/img/Rectangle 91.png" alt="">
                 </div>
                 <div class="info">
                   <h3 class="board-tit">대교 MUN캠프와 함께하는 영어 말하기 대회</h3>
