--- a/noonno/html/guide/guide_test_.html
+++ b/noonno/html/guide/guide_test_.html
@@ -9,6 +9,9 @@
   <link href="../../resource/css/reset.css" rel="stylesheet" type="text/css"/>
   <link href="../../resource/css/common.css" rel="stylesheet" type="text/css"/>
   <link href="../../resource/css/common_kim.css" rel="stylesheet" type="text/css"/>
+  <script type="text/javascript" src="../../resource/js/jquery-1.8.2.min.js"></script>
+  <script type="text/javascript" src="../../resource/js/jquery-ui.min.js"></script>
+
 
 
 </head>
@@ -16,9 +19,103 @@
   <div class="wrap sub">
 
     <div class="gnb_wrap">
+      <div class="gnb_top">
+        <ul>
+          <li><a href="#">로그인</a></li>
+          <li><a href="#">회원가입</a></li>
+          <li><a href="#">통합검색</a></li>
+          <li><a href="#">가까운 눈높이 찾기</a></li>
+          <li><a class="point01" href="#">온라인 상담신청</a></li>
+        </ul>
+        <!-- 로그인상태 -->
+        <!--
+        <ul>
+          <li><a href="#">로그아웃</a></li>
+          <li><a href="#">통합검색</a></li>
+          <li><a href="#">가까운 눈높이 찾기</a></li>
+          <li><a class="point01" href="#">온라인 상담신청</a></li>
+        </ul>
+      -->
+        <!--// 로그인상태 -->
+      </div>
+      <div class="gnb_bottom">
+        <div class="logo">
+          <a href="#">
+            <img src="../../resource/img/common/logo.png" alt="눈높이">
+          </a>
+        </div>
+        <div class="gnb">
+          <ul>
+            <li>
+              <a href="#">눈높이소개</a>
+              <ul class="depth_02 depth02_1">
+                <li><a href="#none">브랜드스토리</a></li>
+                <li><a href="#none">눈높이 학습서비스</a></li>
+
+              </ul>
+            </li>
+            <li>
+              <a href="#">제품소개</a>
+              <ul class="depth_02 depth02_1">
+                <li><a href="#none">제품소개</a></li>
+                <li><a href="#none">제품 한눈에 보기</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">커뮤니티</a>
+              <ul class="depth_02 depth02_1">
+                <li><a href="#none">눈높이소식</a></li>
+                <li><a href="#none">이벤트</a></li>
+                <li><a href="#none">교육정보</a></li>
+                <li><a href="#none">학습후기</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">회원서비스</a>
+              <ul class="depth_02 depth02_1">
+                <li><a href="#none">눈높이365</a></li>
+                <li><a href="#none">눈높이학습관</a></li>
+                <li><a href="#none">눈높이성장판</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#"><span class="olympiad">눈높이올림파이드</span></a>
+              <ul class="depth_02 depth02_1">
+                <li><a href="#none">대회소개</a></li>
+                <li><a href="#none">접수안내</a></li>
+                <li><a href="#none">공지사항</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+        <div class="right_menu">
+          <ul>
+            <li><a href="#"><img src="../../resource/img/common/sub_search_icon.png"></a></li>
+            <li><a href="#"><img src="../../resource/img/common/ic_allMenu.png"></a></li>
+
+          </ul>
+        </div>
+      </div>
 
     </div>
-    <div class="content"></div>
+
+    <script>
+      $(document).ready(function(){
+
+        $('.gnb > ul > li > a').mouseenter(function(){
+          $('.depth_02').show();
+          $('.gnb_bottom').addClass('on');
+
+        });
+
+        $('.gnb_wrap').mouseleave(function(){
+          $('.depth_02').hide();
+          $('.gnb_bottom').removeClass('on');
+
+        });
+      });
+    </script>
+    <div class="content" style="height:2000px"></div>
     <div class="footer">
       <div class="foot_top">
         <div class="search_teach">
