--- a/noonno/html/community/event_list.html
+++ b/noonno/html/community/event_list.html
@@ -31,88 +31,88 @@
             <li>
               <a href="" class="board">
                 <div class="thumb">
-                  <img src="../../resource/img/Rectangle 91-7.png" alt="">
+                  <img src="../../resource/img/event01.png" alt="">
                 </div>
                 <div class="info">
                   <h3 class="board-tit">세상에서 가장 큰 학교가 찐쌤을 찾습니다!</h3>
-                  <p><span class="br-cate">뉴스</span><span class="date">2020.07.08</span></p>
+                  <p><span class="br-cate">이벤트</span><span class="date">2020.07.08</span></p>
                 </div>
               </a>
             </li>
             <li>
               <a href="./news_notice_view.html" class="board">
                 <div class="thumb">
-                  <img src="../../resource/img/Rectangle 91-6.png" alt="">
+                  <img src="../../resource/img/event02.png" alt="">
                 </div>
                 <div class="info">
                   <h3 class="board-tit">2019 더불어배우다 연차보고서 e-book 발간소식 안내</h3>
-                  <p><span class="br-cate">뉴스</span><span class="date">2020.07.08</span></p>
+                  <p><span class="br-cate">이벤트</span><span class="date">2020.07.08</span></p>
                 </div>
               </a>
             </li>
             <li>
               <a href="" class="board">
                 <div class="thumb">
-                  <img src="../../resource/img/Rectangle 91-5.png" alt="">
+                  <img src="../../resource/img/event03.png" alt="">
                 </div>
                 <div class="info">
                   <h3 class="board-tit">트라움 감성 체험전 '우당탕탕 아빠가 만든 놀이터'</h3>
-                  <p><span class="br-cate">뉴스</span><span class="date">2020.07.08</span></p>
+                  <p><span class="br-cate">이벤트</span><span class="date">2020.07.08</span></p>
                 </div>
               </a>
             </li>
             <li>
               <a href="" class="board">
                 <div class="thumb">
-                  <img src="../../resource/img/Rectangle 91-4.png" alt="">
+                  <img src="../../resource/img/event04.png" alt="">
                 </div>
                 <div class="info">
                   <h3 class="board-tit">눈높이예스클래스, 써밋 수학 coming   soon!</h3>
-                  <p><span class="br-cate">뉴스</span><span class="date">2020.07.08</span></p>
+                  <p><span class="br-cate">이벤트</span><span class="date">2020.07.08</span></p>
                 </div>
               </a>
             </li>
             <li>
               <a href="" class="board">
                 <div class="thumb">
-                  <img src="../../resource/img/Rectangle 91-3.png" alt="">
+                  <img src="../../resource/img/event05.png" alt="">
                 </div>
                 <div class="info">
                   <h3 class="board-tit">아빠도 한 눈높이국어</h3>
-                  <p><span class="br-cate">뉴스</span><span class="date">2020.07.08</span></p>
+                  <p><span class="br-cate">이벤트</span><span class="date">2020.07.08</span></p>
                 </div>
               </a>
             </li>
             <li>
               <a href="" class="board">
                 <div class="thumb">
-                  <img src="../../resource/img/Rectangle 91-2.png" alt="">
+                  <img src="../../resource/img/event06.png" alt="">
                 </div>
                 <div class="info">
                   <h3 class="board-tit">'까칠한 아이' 오디오북 전자책 출시!</h3>
-                  <p><span class="br-cate">뉴스</span><span class="date">2020.07.08</span></p>
+                  <p><span class="br-cate">이벤트</span><span class="date">2020.07.08</span></p>
                 </div>
               </a>
             </li>
             <li>
               <a href="" class="board">
                 <div class="thumb">
-                  <img src="../../resource/img/Rectangle 91-1.png" alt="">
+                  <img src="../../resource/img/event07.png" alt="">
                 </div>
                 <div class="info">
                   <h3 class="board-tit">언제나 우리의 선택은 눈높이수학</h3>
-                  <p><span class="br-cate">뉴스</span><span class="date">2020.07.08</span></p>
+                  <p><span class="br-cate">이벤트</span><span class="date">2020.07.08</span></p>
                 </div>
               </a>
             </li>
             <li>
               <a href="" class="board">
                 <div class="thumb">
-                  <img src="../../resource/img/Rectangle 91.png" alt="">
+                  <img src="../../resource/img/event08.png" alt="">
                 </div>
                 <div class="info">
                   <h3 class="board-tit">대교 MUN캠프와 함께하는 영어 말하기 대회</h3>
-                  <p><span class="br-cate">뉴스</span><span class="date">2020.07.08</span></p>
+                  <p><span class="br-cate">이벤트</span><span class="date">2020.07.08</span></p>
                 </div>
               </a>
             </li>
