--- a/noonno/html/community/event_list.html
+++ b/noonno/html/community/event_list.html
@@ -32,15 +32,22 @@
               <a href="" class="board">
                 <div class="thumb">
                   <img src="../../resource/img/event01.png" alt="">
+                  <div class="mousehover">
+                    <div class="aiignbox">
+                      <h3 class="mouseho-tit">종료까지 <span class="dday">105</span>일 남음</h3>
+                      <p class="mouseho-txt"><span class="">당첨자발표</span><span class="date">2020.07.08</span></p>
+                    </div>
+                  </div>
                 </div>
                 <div class="info">
                   <h3 class="board-tit">세상에서 가장 큰 학교가 찐쌤을 찾습니다!</h3>
                   <p><span class="br-cate">이벤트</span><span class="date">2020.07.08</span></p>
                 </div>
+                
               </a>
             </li>
             <li>
-              <a href="./news_notice_view.html" class="board">
+              <a href="./event_view.html" class="board">
                 <div class="thumb">
                   <img src="../../resource/img/event02.png" alt="">
                 </div>
