--- a/noonno/html/guide/guide_test_.html
+++ b/noonno/html/guide/guide_test_.html
@@ -11,6 +11,7 @@
   <link href="../../resource/css/common_kim.css" rel="stylesheet" type="text/css"/>
   <script type="text/javascript" src="../../resource/js/jquery-1.8.2.min.js"></script>
   <script type="text/javascript" src="../../resource/js/jquery-ui.min.js"></script>
+  <script type="text/javascript" src="../../resource/js/design_common.js"></script>
 
 
 
@@ -134,9 +135,58 @@
             <li><a href="#" class="blind insta">인스타</a></li>
           </ul>
         </div>
-        <div></div>
+        <div class="brand_site">
+            <div class="tit">브랜드 사이트</div>
+            <div class="brand_open">
+                <ul>
+                    <li><a href="#" target="_blank">대교닷컴</a></li>
+                    <li><a href="#" target="_blank">Kids jam</a></li>
+
+                    <li><a href="#" target="_blank">눈높이아티맘</a></li>
+                    <li><a href="#" target="_blank">드림랜드</a></li>
+
+                    <li><a href="#" target="_blank">차이홍중국어</a></li>
+                    <li><a href="#" target="_blank">상담센터</a></li>
+
+                    <li><a href="#" target="_blank">HSK 시험센터</a></li>
+                    <li><a href="#" target="_blank">티칭랩</a></li>
+
+                    <li><a href="#" target="_blank">솔루니</a></li>
+                    <li><a href="#" target="_blank">드림멘토</a></li>
+
+                    <li><a href="#" target="_blank">대교 스피킹</a></li>
+                    <li><a href="#" target="_blank">독서멘토</a></li>
+
+                    <li><a href="#" target="_blank">소빅스</a></li>
+                    <li><a href="#" target="_blank">차이홍공지학당</a></li>
+
+                    <li><a href="#" target="_blank">대교어린이TV</a></li>
+                    <li><a href="#" target="_blank">베이비TV</a></li>
+
+                    <li><a href="#" target="_blank">Eye Level</a></li>
+                </ul>
+                <div class="tit">
+                  브랜드사이트
+                </div>
+            </div>
+        </div>
       </div>
       <div class="foot_bottom">
+        <div class="f_logo">
+            <a href="#"><img src="../../resource/img/common/f_logo.png"></a>
+        </div>
+        <div class="f_link">
+            <ul>
+                <li><a href="#">개인정보처리방침</a></li>
+                <li><a href="#">이용약관</a></li>
+                <li><a href="#">이메일주소 무단수집거부</a></li>
+                <li><a href="#">법적고지</a></li>
+                <li><a href="#">지점/센터 찾기</a></li>
+            </ul>
+        </div>
+        <div class="f_info">대표이사 : 박수완 서울시 관악구 보라매로 3길 23 (보라매동 729-21) 대교타워 ㈜대교 TEL : 080-222-0909<br>
+        사업자등록번호 : 112-81-41114 통신판매신고번호 : 제 2013-서울관악 – 0478호 </div>
+        <div class="copyright">Copyright 2020 DAEKYO.,LTD. All Rights Reserved</div>
 
       </div>
     </div>
