--- a/noonno/work_list_ko.html
+++ b/noonno/work_list_ko.html
@@ -7,21 +7,10 @@
   <meta name="Keywords" content="">
   <meta name="Description" content="">
   <link href="./resource/css/reset.css" rel="stylesheet" type="text/css"/>
- 
-  <script type="text/javascript" src="/paulmade/resources/javascript/front/pc/ko/jquery-1.8.2.min.js"></script>
-  <script type="text/javascript" src="/paulmade/resources/javascript/front/pc/ko/jquery-ui.min.js"></script>
-  <script type="text/javascript" src="/paulmade/resources/javascript/front/pc/ko/design_common.js"></script>
-  
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/5.4.5/js/swiper.min.js"></script>
-  <!--
-  <script type="text/javascript" src="/paulmade/resources/javascript/front/pc/ko/plugin.js"></script>
-  -->
-  <script type="text/javascript" src="/paulmade/resources/javascript/front/pc/ko/TweenMax/TweenMax.min.js"></script>
-  <script type="text/javascript" src="/paulmade/resources/javascript/front/pc/ko/TweenMax/easing/EasePack.min.js"></script>
 
-  
+  <script type="text/javascript" src="./resource/js/jquery-1.8.2.min.js"></script>
+  <script type="text/javascript" src="./resource/js/jquery-ui.min.js"></script>
 
-  <script type="text/javascript" src="/paulmade/resources/javascript/front/pc/ko/fullpage/fullpage.js"></script>
   <title>Daekyo work_list</title>
   <style type="text/css">
 
@@ -134,21 +123,30 @@
       <col>
     </colgroup>
     <tbody>
-    <tr  >
+    <tr  class="ok">
       <td>가이드</td>
       <td></td>
       <td></td>
       <td></td>
       <td>guide</td>
-      <td><a href="#" target="_blank">guide</a></td>
+      <td><a href="html/guide/guide_test_.html" target="_blank">layout</a></td>
       <td class=""></td>
     </tr>
-  
-    
+    <tr  class="">
+
+      <td></td>
+      <td></td>
+      <td></td>
+      <td>guide</td>
+      <td><a href="html/guide/element.html" target="_blank">element</a></td>
+      <td class=""></td>
+    </tr>
+
+
     </tbody>
   </table>
   <!-- //가이드 -->
-  <h2>가이드</h2>
+  <h2>커뮤니티</h2>
   <table>
     <colgroup>
       <col width="10%">
@@ -160,274 +158,43 @@
       <col>
     </colgroup>
     <tbody>
-    <tr>
-      <td>회사소개</td>
-      <td>회사개요</td>
+    <tr class="ok">
+      <td>커뮤니티</td>
+      <td rowspan="2">공지&뉴스</td>
+      <td>리스트</td>
       <td></td>
-      <td></td>
-      <td rowspan="11">company</td>
-      <td><a href="/paulmade/ko/etc/cookie.html" target="_blank"></a></td>
+      <td rowspan="11">community</td>
+      <td><a href="html/community/news_notice_list.html" target="_blank">news_notice_list</a></td>
       <td class=""></td>
     </tr>
     <tr class="ok">
-      <td>CEO 인사말</td>
+
+      <td>뷰</td>
       <td></td>
-      <td></td>
-      <td><a href="/paulmade/ko/company/greeting.html" target="_blank">greeting</a></td>
+      <td><a href="html/community/news_notice_view.html" target="_blank">news_notice_view</a></td>
       <td class=""></td>
     </tr>
-    <tr>
-      <td>회사연혁</td>
+
+    <tr class="ok">
+      <td rowspan="2">이벤트</td>
+      <td>리스트</td>
       <td></td>
-      <td></td>
-      <td><a href="/paulmade/ko/etc/privacy.html" target="_blank"></a></td>
-      <td class=""></td>
-    </tr>
-    <tr>
-      <td>고객사 소개</td>
-      <td></td>
-      <td></td>
-      <td><a href="/paulmade/ko/etc/privacy.html" target="_blank"></a></td>
-      <td class=""></td>
-    </tr>
-    <tr>
-      <td>연구소 소개</td>
-      <td></td>
-      <td></td>
-      <td><a href="/paulmade/ko/etc/privacy.html" target="_blank"></a></td>
+
+      <td><a href="html/community/event_list.html" target="_blank">event_list</a></td>
       <td class=""></td>
     </tr>
     <tr class="ok">
-      <td>찾아오시는 길</td>
+
+      <td>뷰</td>
       <td></td>
-      <td></td>
-      <td><a href="/paulmade/ko/company/contact.html" target="_blank">contact</a></td>
+      <td><a href="html/community/event_view.html" target="_blank">event_view</a></td>
       <td class=""></td>
     </tr>
-  </table>
-  <!-- 회사소개 -->
-  <h2>회사소개</h2>
-  <table>
-    <colgroup>
-      <col width="10%">
-      <col width="15%">
-      <col width="15%">
-      <col width="20%">
-      <col width="10%">
-      <col width="10%">
-      <col>
-    </colgroup>
-    <tbody>
-    <tr>
-      <td>회사소개</td>
-      <td>회사개요</td>
-      <td></td>
-      <td></td>
-      <td rowspan="11">company</td>
-      <td><a href="/paulmade/ko/etc/cookie.html" target="_blank"></a></td>
-      <td class=""></td>
-    </tr>
-    <tr class="ok">
-      <td>CEO 인사말</td>
-      <td></td>
-      <td></td>
-      <td><a href="/paulmade/ko/company/greeting.html" target="_blank">greeting</a></td>
-      <td class=""></td>
-    </tr>
-    <tr>
-      <td>회사연혁</td>
-      <td></td>
-      <td></td>
-      <td><a href="/paulmade/ko/etc/privacy.html" target="_blank"></a></td>
-      <td class=""></td>
-    </tr>
-    <tr>
-      <td>고객사 소개</td>
-      <td></td>
-      <td></td>
-      <td><a href="/paulmade/ko/etc/privacy.html" target="_blank"></a></td>
-      <td class=""></td>
-    </tr>
-    <tr>
-      <td>연구소 소개</td>
-      <td></td>
-      <td></td>
-      <td><a href="/paulmade/ko/etc/privacy.html" target="_blank"></a></td>
-      <td class=""></td>
-    </tr>
-    <tr class="ok">
-      <td>찾아오시는 길</td>
-      <td></td>
-      <td></td>
-      <td><a href="/paulmade/ko/company/contact.html" target="_blank">contact</a></td>
-      <td class=""></td>
-    </tr>
+
   </table>
 
 
-   <!-- 제품소개 -->
-  <h2>제품소개</h2>
-  <table>
-    <colgroup>
-      <col width="10%">
-      <col width="15%">
-      <col width="15%">
-      <col width="20%">
-      <col width="10%">
-      <col width="10%">
-      <col>
-    </colgroup>
-    <tbody>
-    <tr>
-      <td>제품소개</td>
-      <td rowspan="4">제품소개</td>
-      <td>KF94</td>
-      <td></td>
-      <td rowspan="11">product</td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td>KF80</td>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td>KFAD</td>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td>일회용</td>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr class="ok">
-      <td>인증서&성적증명서</td>
-      <td></td>
-      <td></td>
-      <td><a href="/paulmade/ko/product/certificate.html" target="_blank">certificate</a></td>
-      <td></td>
-    </tr>
-    <tr class="ok">
-      <td>제품 카탈로그</td> 
-      <td></td>
-      <td></td>
-      <td><a href="/paulmade/ko/product/catalog.html" target="_blank">catalog</a></td>
-      <td></td>
-    </tr>
-  </table>
 
-  <!-- 홍보 -->
-  <h2>PR</h2>
-  <table>
-    <colgroup>
-      <col width="10%">
-      <col width="15%">
-      <col width="15%">
-      <col width="20%">
-      <col width="10%">
-      <col width="10%">
-      <col>
-    </colgroup>
-    <tbody>
-    <tr  class="ok">
-      <td>홍보센터</td>
-      <td rowspan="2">뉴스&공지사항</td>
-      <td>list</td>
-      <td></td>
-      <td rowspan="11">pr</td>
-      <td><a href="/paulmade/ko/pr/news_list.html" target="_blank">news_list</a></td>
-      <td class=""></td>
-    </tr>
-    <tr class="ok">
-      <td>view</td>
-      <td></td>
-      <td><a href="/paulmade/ko/pr/news_view.html" target="_blank">news_view</a></td>
-      <td class=""></td>
-    </tr>
-    <tr>
-      <td>ci소개</td>
-      <td></td>
-      <td></td>
-      <td><a href="/paulmade/ko/pr/news_view.html" target="_blank">news_view</a></td>
-      <td class=""></td>
-    </tr>
-  </table>
- 
-  <!-- 고객센터 -->
-  <h2>CS</h2>
-  <table>
-    <colgroup>
-      <col width="10%">
-      <col width="15%">
-      <col width="15%">
-      <col width="20%">
-      <col width="10%">
-      <col width="10%">
-      <col>
-    </colgroup>
-    <tbody>
-    <tr class="ok">
-      <td>고객센터</td>
-      <td>자주하는 질문</td>
-      <td></td>
-      <td></td>
-      <td rowspan="11">cs</td>
-      <td><a href="/paulmade/ko/cs/faq.html" target="_blank">faq</a></td>
-      <td class=""></td>
-    </tr>
-    <tr class="ok">
-      <td>1:1 문의</td>
-      <td></td>
-      <td></td>
-      <td><a href="/paulmade/ko/cs/inquiry.html" target="_blank">inquiry</a></td>
-      <td class=""></td>
-    </tr>
-  </table>
-
-  <!-- 기타 -->
-  <h2>etc</h2>
-  <table>
-    <colgroup>
-      <col width="10%">
-      <col width="15%">
-      <col width="15%">
-      <col width="20%">
-      <col width="10%">
-      <col width="10%">
-      <col>
-    </colgroup>
-    <tbody>
-    <tr class="ok">
-      <td>etc</td>
-      <td>쿠키</td>
-      <td></td>
-      <td></td>
-      <td rowspan="11">etc</td>
-      <td><a href="/paulmade/ko/etc/cookie.html" target="_blank">cookie</a></td>
-      <td class=""></td>
-    </tr>
-    <tr class="ok">
-      <td>이메일무단수집거부</td>
-      <td></td>
-      <td></td>
-      <td><a href="/paulmade/ko/etc/email.html" target="_blank">email</a></td>
-      <td class=""></td>
-    </tr>
-    <tr class="ok">
-      <td>개인정보취급방침</td>
-      <td></td>
-      <td></td>
-      <td><a href="/paulmade/ko/etc/privacy.html" target="_blank">privacy</a></td>
-      <td class=""></td>
-    </tr>
-  </table>
-
-  
 
 
 </div>
