--- a/noonno/html/community/event_view.html
+++ b/noonno/html/community/event_view.html
@@ -9,7 +9,7 @@
   <link href="../../resource/css/reset.css" rel="stylesheet" type="text/css"/>
   <link href="../../resource/css/common.css" rel="stylesheet" type="text/css"/>
   <script type="text/javascript" src="../../resource/js/jquery-1.8.2.min.js" ></script>
-  <script type="text/javascript" src="../../resource/js/basic.js" ></script>
+  <script type="text/javascript" src="../../resource/js/board_event.js" ></script>
 
 </head>
 <body>
