--- a/noonno/html/community/news_notice_list.html
+++ b/noonno/html/community/news_notice_list.html
@@ -8,6 +8,11 @@
   <meta name="Description" content="">
   <link href="../../resource/css/reset.css" rel="stylesheet" type="text/css"/>
   <link href="../../resource/css/common.css" rel="stylesheet" type="text/css"/>
+  <link href="../../resource/css/common_kim.css" rel="stylesheet" type="text/css"/>
+  <script type="text/javascript" src="../../resource/js/jquery-1.8.2.min.js"></script>
+  <script type="text/javascript" src="../../resource/js/jquery-ui.min.js"></script>
+  <script type="text/javascript" src="../../resource/js/design_common.js"></script>
+  <script type="text/javascript" src="../../resource/js/board_event.js" ></script>
 
 
 </head>
