--- a/noonno/html/community/event_list.html
+++ b/noonno/html/community/event_list.html
@@ -105,7 +105,7 @@
       <div class="location_bar">
         로케이션바
       </div>
-      <!-- 커뮤니티 - 뉴스,공지 -->
+      <!-- 커뮤니티 - 이벤트 -->
       <div class="inner">
         <h2 class="sub-tit">이벤트</h2>
         <div class="board-search">
@@ -129,7 +129,7 @@
                   </div>
                 </div>
                 <div class="info">
-                  <h3 class="board-tit">세상에서 가장 큰 학교가 찐쌤을 찾습니다!</h3>
+                  <h3 class="board-tit">눈높이초등1학기 자신만만 배틀전 Coming Soon!</h3>
                   <p><span class="br-cate">이벤트</span><span class="date">2020.07.28 09:00 ~ 2020.07.29 18:00</span></p>
                 </div>
                 <p class="wabal-dday">D-<span>16</span></p>
@@ -147,7 +147,7 @@
                   </div>
                 </div>
                 <div class="info">
-                  <h3 class="board-tit">2019 더불어배우다 연차보고서 e-book 발간소식 안내</h3>
+                  <h3 class="board-tit">제28회 눈높이아동문학대전 당첨자발표</h3>
                   <p><span class="br-cate">이벤트</span><span class="date">2020.07.28 09:00 ~ 2020.07.29 18:00</span></p>
                 </div>
                 
@@ -165,7 +165,7 @@
                   </div>
                 </div>
                 <div class="info">
-                  <h3 class="board-tit">트라움 감성 체험전 '우당탕탕 아빠가 만든 놀이터'</h3>
+                  <h3 class="board-tit">눈높이청소년 문학상</h3>
                   <p><span class="br-cate">이벤트</span><span class="date">2020.07.28 09:00 ~ 2020.07.29 18:00</span></p>
                 </div>
                 <p class="wabal-dday">D-<span>16</span></p>
@@ -183,7 +183,7 @@
                   </div>
                 </div>
                 <div class="info">
-                  <h3 class="board-tit">눈높이예스클래스, 써밋 수학 coming   soon!</h3>
+                  <h3 class="board-tit">온라인 학습 면역력 눈높이문해력으로 챙겨주세요!</h3>
                   <p><span class="br-cate">이벤트</span><span class="date">2020.07.28 09:00 ~ 2020.07.29 18:00</span></p>
                 </div>
                 <p class="wabal-dday">D-<span>16</span></p>
@@ -201,7 +201,7 @@
                   </div>
                 </div>
                 <div class="info">
-                  <h3 class="board-tit">아빠도 한 눈높이국어</h3>
+                  <h3 class="board-tit">써밋스피드수학 중등과정 사전예약 이벤트 당첨자발표</h3>
                   <p><span class="br-cate">이벤트</span><span class="date">2020.07.28 09:00 ~ 2020.07.29 18:00</span></p>
                 </div>
                 <p class="wabal-dday">D-<span>16</span></p>
@@ -219,7 +219,7 @@
                   </div>
                 </div>
                 <div class="info">
-                  <h3 class="board-tit">'까칠한 아이' 오디오북 전자책 출시!</h3>
+                  <h3 class="board-tit">눈높이아티맘 6개월 이상 선결제시 3만원 할인!</h3>
                   <p><span class="br-cate">이벤트</span><span class="date">2020.07.28 09:00 ~ 2020.07.29 18:00</span></p>
                 </div>
                 <p class="wabal-dday">D-<span>16</span></p>
@@ -237,7 +237,7 @@
                   </div>
                 </div>
                 <div class="info">
-                  <h3 class="board-tit">언제나 우리의 선택은 눈높이수학</h3>
+                  <h3 class="board-tit">2020 써밋썸머리그를 찜해봐!</h3>
                   <p><span class="br-cate">이벤트</span><span class="date">2020.07.28 09:00 ~ 2020.07.29 18:00</span></p>
                 </div>
               </a>
@@ -254,7 +254,7 @@
                   </div>
                 </div>
                 <div class="info">
-                  <h3 class="board-tit">대교 MUN캠프와 함께하는 영어 말하기 대회</h3>
+                  <h3 class="board-tit">배움을 이어가다 드림멘토 체험학습!</h3>
                   <p><span class="br-cate">이벤트</span><span class="date">2020.07.28 09:00 ~ 2020.07.29 18:00</span></p>
                 </div>
                 <p class="wabal-dday-end">종료</p>
@@ -308,6 +308,79 @@
             </li>
           </ul>
         </div>
+      </div>
+    </div>
+    <div class="footer">
+      <div class="foot_top">
+        <div class="search_teach">
+          <ul>
+            <li>눈높이</li>
+            <li><a href="#" title="search_teach">선생님 소개</a></li>
+            <li><a href="#" title="search_teach">선생님 모집</a></li>
+            <li><a href="#" title="search_teach">선생님 찾기</a></li>
+
+          </ul>
+        </div>
+        <div class="foot_sns">
+          <ul>
+            <li><a href="#" class="blind youtube">유튜브</a></li>
+            <li><a href="#" class="blind blog">블로그</a></li>
+            <li><a href="#" class="blind insta">인스타</a></li>
+          </ul>
+        </div>
+        <div class="brand_site">
+            <div class="tit">브랜드 사이트</div>
+            <div class="brand_open">
+                <ul>
+                    <li><a href="#" target="_blank">대교닷컴</a></li>
+                    <li><a href="#" target="_blank">Kids jam</a></li>
+
+                    <li><a href="#" target="_blank">눈높이아티맘</a></li>
+                    <li><a href="#" target="_blank">드림랜드</a></li>
+
+                    <li><a href="#" target="_blank">차이홍중국어</a></li>
+                    <li><a href="#" target="_blank">상담센터</a></li>
+
+                    <li><a href="#" target="_blank">HSK 시험센터</a></li>
+                    <li><a href="#" target="_blank">티칭랩</a></li>
+
+                    <li><a href="#" target="_blank">솔루니</a></li>
+                    <li><a href="#" target="_blank">드림멘토</a></li>
+
+                    <li><a href="#" target="_blank">대교 스피킹</a></li>
+                    <li><a href="#" target="_blank">독서멘토</a></li>
+
+                    <li><a href="#" target="_blank">소빅스</a></li>
+                    <li><a href="#" target="_blank">차이홍공지학당</a></li>
+
+                    <li><a href="#" target="_blank">대교어린이TV</a></li>
+                    <li><a href="#" target="_blank">베이비TV</a></li>
+
+                    <li><a href="#" target="_blank">Eye Level</a></li>
+                </ul>
+                <div class="tit">
+                  브랜드사이트
+                </div>
+            </div>
+        </div>
+      </div>
+      <div class="foot_bottom">
+        <div class="f_logo">
+            <a href="#"><img src="../../resource/img/common/f_logo.png"></a>
+        </div>
+        <div class="f_link">
+            <ul>
+                <li><a href="#">개인정보처리방침</a></li>
+                <li><a href="#">이용약관</a></li>
+                <li><a href="#">이메일주소 무단수집거부</a></li>
+                <li><a href="#">법적고지</a></li>
+                <li><a href="#">지점/센터 찾기</a></li>
+            </ul>
+        </div>
+        <div class="f_info">대표이사 : 박수완 서울시 관악구 보라매로 3길 23 (보라매동 729-21) 대교타워 ㈜대교 TEL : 080-222-0909<br>
+        사업자등록번호 : 112-81-41114 통신판매신고번호 : 제 2013-서울관악 – 0478호 </div>
+        <div class="copyright">Copyright 2020 DAEKYO.,LTD. All Rights Reserved</div>
+
       </div>
     </div>
   </div>
