--- a/noonno/html/community/education_list.html
+++ b/noonno/html/community/education_list.html
@@ -102,9 +102,9 @@
     </div>
 
     <div class="content">
-      <!-- 커뮤니티 - 뉴스,공지 -->
+      <!-- 커뮤니티 - 교육정보 -->
       <div class="inner">
-        <h2 class="sub-tit">눈높이소식</h2>
+        <h2 class="sub-tit">교육정보</h2>
         <div class="board-search">
           <form action="" name="">
             <input name="" value="" autocomplete="off" placeholder="검색어를 입력해주세요">
@@ -117,7 +117,7 @@
             <li>
               <a href="" class="board">
                 <div class="thumb">
-                  <img src="../../resource/img/Rectangle 91-7.png" alt="">
+                  <img src="../../resource/img/edu01.png" alt="">
                 </div>
                 <div class="info">
                   <h3 class="board-tit">세상에서 가장 큰 학교가 찐쌤을 찾습니다!</h3>
@@ -126,9 +126,9 @@
               </a>
             </li>
             <li>
-              <a href="./news_notice_view.html" class="board">
+              <a href="./education_view.html" class="board">
                 <div class="thumb">
-                  <img src="../../resource/img/Rectangle 91-6.png" alt="">
+                  <img src="../../resource/img/edu02.png" alt="">
                 </div>
                 <div class="info">
                   <h3 class="board-tit">2019 더불어배우다 연차보고서 e-book 발간소식 안내</h3>
@@ -139,7 +139,7 @@
             <li>
               <a href="" class="board">
                 <div class="thumb">
-                  <img src="../../resource/img/Rectangle 91-5.png" alt="">
+                  <img src="../../resource/img/edu03.png" alt="">
                 </div>
                 <div class="info">
                   <h3 class="board-tit">트라움 감성 체험전 '우당탕탕 아빠가 만든 놀이터'</h3>
@@ -150,7 +150,7 @@
             <li>
               <a href="" class="board">
                 <div class="thumb">
-                  <img src="../../resource/img/Rectangle 91-4.png" alt="">
+                  <img src="../../resource/img/edu04.png" alt="">
                 </div>
                 <div class="info">
                   <h3 class="board-tit">눈높이예스클래스, 써밋 수학 coming   soon!</h3>
@@ -161,7 +161,7 @@
             <li>
               <a href="" class="board">
                 <div class="thumb">
-                  <img src="../../resource/img/Rectangle 91-3.png" alt="">
+                  <img src="../../resource/img/edu05.png" alt="">
                 </div>
                 <div class="info">
                   <h3 class="board-tit">아빠도 한 눈높이국어</h3>
@@ -172,7 +172,7 @@
             <li>
               <a href="" class="board">
                 <div class="thumb">
-                  <img src="../../resource/img/Rectangle 91-2.png" alt="">
+                  <img src="../../resource/img/edu06.png" alt="">
                 </div>
                 <div class="info">
                   <h3 class="board-tit">'까칠한 아이' 오디오북 전자책 출시!</h3>
@@ -183,7 +183,7 @@
             <li>
               <a href="" class="board">
                 <div class="thumb">
-                  <img src="../../resource/img/Rectangle 91-1.png" alt="">
+                  <img src="../../resource/img/edu07.png" alt="">
                 </div>
                 <div class="info">
                   <h3 class="board-tit">언제나 우리의 선택은 눈높이수학</h3>
@@ -194,7 +194,7 @@
             <li>
               <a href="" class="board">
                 <div class="thumb">
-                  <img src="../../resource/img/Rectangle 91.png" alt="">
+                  <img src="../../resource/img/edu08.png" alt="">
                 </div>
                 <div class="info">
                   <h3 class="board-tit">대교 MUN캠프와 함께하는 영어 말하기 대회</h3>
