--- a/noonno/work_list_ko.html
+++ b/noonno/work_list_ko.html
@@ -190,7 +190,21 @@
       <td><a href="html/community/event_view.html" target="_blank">event_view</a></td>
       <td class=""></td>
     </tr>
+    <tr class="ok">
 
+      <td rowspan="2">교육정보</td>
+      <td>리스트</td>
+      <td></td>
+      <td><a href="html/community/education_list.html" target="_blank">education_list</a></td>
+      <td class=""></td>
+    </tr>
+    <tr class="ok">
+
+      <td>뷰</td>
+      <td></td>
+      <td><a href="html/community/education_view.html" target="_blank">education_view</a></td>
+      <td class=""></td>
+    </tr>
   </table>
 
 
