--- a/noonno/html/community/event_list.html
+++ b/noonno/html/community/event_list.html
@@ -101,9 +101,30 @@
     </div>
 
     <div class="content">
-      <!-- 로케이션 바 -->
-      <div class="location_bar">
-        로케이션바
+      <div class="location">
+        <div class="loca_home">
+          <a href="#" class="blind">홈</a>
+        </div>
+        <div class="loca_sel">눈높이 소개
+          <span class="loca_arrow blind">더보기</span>
+          <div class="hidden_div">
+            <ul class="hidden_loca">
+              <li><a href="#">서브뎁스01</a></li>
+              <li><a href="#">서브뎁스01</a></li>
+              <li><a href="#">서브뎁스01</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="loca_sel">눈높이 학습서비스
+          <span class="loca_arrow blind">더보기</span>
+          <div class="hidden_div">
+            <ul class="hidden_loca">
+              <li><a href="#">서브뎁스02</a></li>
+              <li><a href="#">서브뎁스02</a></li>
+              <li><a href="#">서브뎁스02</a></li>
+            </ul>
+          </div>
+        </div>
       </div>
       <!-- 커뮤니티 - 이벤트 -->
       <div class="inner">
