--- a/noonno/html/community/news_notice_view.html
+++ b/noonno/html/community/news_notice_view.html
@@ -133,10 +133,15 @@
         <div class="board-view">
           <div class="br-view-top">
             <p><span class="br-cate">뉴스</span><span class="date">2020.07.28</span></p>
-            <div class="share">
-              <a href="" class="share-btn">
-                <img src="../../resource/img/common/share.png" alt="">
-              </a>
+            <div class="share_btn">
+              <span class="blind">공유하기</span>
+              <div class="hidden_share">
+                <ul>
+                  <li><span class="insta blind">인스타</span></li>
+                  <li><span class="face blind">페북</span></li>
+                  <li><span class="twi blind">트위터</span></li>
+                </ul>
+              </div>
             </div>
           </div>
           <div class="br-view-cont">
