--- a/noonno/html/etc/etc_not_content.html
+++ b/noonno/html/etc/etc_not_content.html
@@ -9,10 +9,13 @@
   <link href="../../resource/css/reset.css" rel="stylesheet" type="text/css"/>
   <link href="../../resource/css/common.css" rel="stylesheet" type="text/css"/>
   <link href="../../resource/css/common_kim.css" rel="stylesheet" type="text/css"/>
+  <link href="../../resource/css/etc01.css" rel="stylesheet" type="text/css"/>
   <script type="text/javascript" src="../../resource/js/jquery-1.8.2.min.js"></script>
   <script type="text/javascript" src="../../resource/js/jquery-ui.min.js"></script>
   <script type="text/javascript" src="../../resource/js/design_common.js"></script>
   <script type="text/javascript" src="../../resource/js/board_event.js" ></script>
+
+
 
 </head>
 <body>
@@ -99,7 +102,6 @@
       </div>
 
     </div>
-
     <div class="content">
       <div class="location">
         <div class="loca_home">
@@ -126,44 +128,20 @@
           </div>
         </div>
       </div>
-      <!-- 커뮤니티 - 이벤트 -->
+      <!-- ETC - 통합검색 false -->
       <div class="inner">
-        <h2 class="sub-tit">눈높이청소년 문학상</h2>
-        
-        <div class="board-view">
-          <div class="br-view-top">
-            <p>
-              <span class="br-cate view-top-txt">이벤트</span>
-              <span class="date">2020.07.28 09:00 ~ 2020.07.29 18:00</span>
-              <span class="view-top-txt02">당첨자발표</span>
-              <span class="dday_date">2020.07.30</span>
-              <span class="end-txt">종료</span>
-              <a href="" class="winner-link">당첨자발표</a>
-            </p>
-            <div class="share_btn">
-              <span class="blind">공유하기</span>
-              <div class="hidden_share">
-                <ul>
-                  <li><span class="insta blind">인스타</span></li>
-                  <li><span class="face blind">페북</span></li>
-                  <li><span class="twi blind">트위터</span></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="br-view-cont">
-            <div class="imgbox">
-              <img src="../../resource/img/common/ev_view.jpg" alt="">
-            </div>
-            <div class="textbox">
-              <p>
-                아동 발달 연구가들은 ‘놀이만큼 중요한 것은 없다’라고 이야기 합니다.<br/>
-  놀이가 왜 중요한지, 어떻게 놀아야 잘 노는 것인지 ‘세 아이의 아빠’만의 놀이 철학을 담아 신체놀이와 감성놀이를 총망라한 놀이 레시피를 개발하여 어린이 체험전에 접목시켰습니다. ‘우당탕탕 아빠가 만든 놀이터’는 놀이 방법이 정해져 있는 다른 체험전과는 달리  각자의 아야기와 상상력을 담아 다양한 방법으로 노는 곳 입니다.<br/><br/>  
-  놀이의 의도가 한눈에 보이는 것은 목적이 정해져 있기 때문에 아이들에게는 좋은 체험이 아니라고 생각합니다. 스스로 목적을 만들어 놀이를 해야 창의력과 자존감을 키울 수 있습니다. 스스로 목적을 만들어 놀이를 해야 창의력과 자존감을 키울 수 있습니다. 다둥이 아빠의 노하우가 담겨있는 다음의 놀이 레시피를 참고하되 아이들만의 자기만의 스토리를 만들어 뇌 발달 놀이를 즐길 수 있도록 독려해주세요.</p>
-            </div>
-            <div class="backbtn">
-              <a href="javascript:history.back();" class="listback">목록보기</a>
-            </div>
+        <h2 class="sub-tit">통합검색</h2>
+        <div class="board-search">
+          <form action="" name="">
+            <input name="" value="" autocomplete="off" placeholder="검색어를 입력해주세요">
+            <button class="btn-search">검색</button>
+          </form>
+        </div>
+        <div class="etc-not-search">
+          <div class="not-search-al">
+            <img src="../../resource/img/etc_search_not.png" alt="">
+            <h3>검색결과가 없습니다</h3>
+            <p>다른 검색어로 시도해보세요</p>
           </div>
         </div>
       </div>
