--- a/noonno/work_list_ko.html
+++ b/noonno/work_list_ko.html
@@ -231,7 +231,37 @@
       <td class=""></td>
     </tr>
   </table>
+  <h2>ETC</h2>
+  <table>
+    <colgroup>
+      <col width="10%">
+      <col width="15%">
+      <col width="15%">
+      <col width="20%">
+      <col width="10%">
+      <col width="10%">
+      <col>
+    </colgroup>
+    <tbody>
+    <tr class="ok">
+      <td>통합검색</td>
+      <td rowspan="2">검색결과</td>
+      <td>검색결과</td>
+      <td></td>
+      <td rowspan="11">etc</td>
+      <td><a href="html/etc/etc.html" target="_blank">etc.html</a></td>
+      <td class=""></td>
+    </tr>
+    <tr class="ok">
 
+      <td>결과없음</td>
+      <td></td>
+      <td><a href="html/etc/etc_not_content.html" target="_blank">etc_not_content.html</a></td>
+      <td class=""></td>
+    </tr>
+
+    
+  </table>
 
 
 
