--- a/noonno/work_list_ko.html
+++ b/noonno/work_list_ko.html
@@ -145,7 +145,7 @@
 
     </tbody>
   </table>
-	<h2>메인</h2>
+<h2>메인</h2>
   <table>
     <colgroup>
       <col width="10%">
@@ -166,7 +166,63 @@
       <td><a href="html/main/main.html" target="_blank">main</a></td>
       <td class=""></td>
     </tr>
-    
+
+  </table>
+
+<h2>눈높이 올림피아드</h2>
+  <table>
+    <colgroup>
+      <col width="10%">
+      <col width="15%">
+      <col width="15%">
+      <col width="20%">
+      <col width="10%">
+      <col width="10%">
+      <col>
+    </colgroup>
+    <tbody>
+    <tr class="ok">
+      <td>눈높이올림피아드</td>
+      <td rowspan="0">눈높이올림피아드</td>
+      <td></td>
+      <td></td>
+      <td rowspan="0">user_service</td>
+      <td><a href="html/user_service/olympiad.html" target="_blank">olympiad</a></td>
+      <td class=""></td>
+    </tr>
+
+  </table>
+    <h2>눈높이 소개</h2>
+  <table>
+    <colgroup>
+      <col width="10%">
+      <col width="15%">
+      <col width="15%">
+      <col width="20%">
+      <col width="10%">
+      <col width="10%">
+      <col>
+    </colgroup>
+    <tbody>
+    <tr class="ok">
+      <td rowspan="2">눈높이 소개</td>
+      <td rowspan="">브랜드 스토리</td>
+      <td></td>
+      <td></td>
+      <td rowspan="2">about</td>
+      <td><a href="html/about/brand_story.html" target="_blank">brand_story</a></td>
+      <td class=""></td>
+    </tr>
+    <tr class="ok">
+
+      <td rowspan="">눈높이학습서비스</td>
+      <td></td>
+      <td></td>
+
+      <td><a href="html/about/edu_service.html" target="_blank">edu_service</a></td>
+      <td class=""></td>
+    </tr>
+
   </table>
 
 
@@ -260,7 +316,7 @@
       <td class=""></td>
     </tr>
 
-    
+
   </table>
 
 
