--- a/noonno/html/member_service/learningcenter.html
+++ b/noonno/html/member_service/learningcenter.html
@@ -130,7 +130,9 @@
       <div class="inner">
         <h2 class="sub-tit">눈높이학습관</h2>
         <div  class="learning-wrap">
-          <div class="bg_img"></div>
+          <div class="round_img">
+            <img src="../../resource/img/learningcenter_01.png" alt="큰이미지">
+          </div>
           <div class="learning_img2">
             <div class="left_wrap">
               <img src="../../resource/img/learningcenter_02.jpg" alt="좌측이미지">
