--- a/noonno/html/member_service/growth_plate.html
+++ b/noonno/html/member_service/growth_plate.html
@@ -9,12 +9,15 @@
   <link href="../../resource/css/reset.css" rel="stylesheet" type="text/css"/>
   <link href="../../resource/css/common.css" rel="stylesheet" type="text/css"/>
   <link href="../../resource/css/common_kim.css" rel="stylesheet" type="text/css"/>
+  <link href="../../resource/css/swiper.css" rel="stylesheet" type="text/css"/>
   <link href="../../resource/css/member_service.css" rel="stylesheet" type="text/css"/>
   <script type="text/javascript" src="../../resource/js/jquery-1.8.2.min.js"></script>
   <script type="text/javascript" src="../../resource/js/jquery-ui.min.js"></script>
   <script type="text/javascript" src="../../resource/js/design_common.js"></script>
+  <script type="text/javascript" src="../../resource/js/plugin.js"></script>
   <script type="text/javascript" src="../../resource/js/board_event.js" ></script>
   <script type="text/javascript" src="../../resource/js/member.js" ></script>
+  
 </head>
 <body>
   <div class="wrap sub">
@@ -130,53 +133,36 @@
       <div class="inner">
         <h2 class="sub-tit">눈높이성장판</h2>
         <div  class="growth-wrap">
-          <div class="bg_img"></div>
+          <div class="round_img">
+            <img src="../../resource/img/growth_01.png" alt="큰이미지">
+          </div>
           <div class="growth_tit">
             <p class="big_txt"><strong>알아서 잘하는 아이로 성장하는</strong> 눈높이러닝센터와 눈높이예스클래스의 공부역량을 길러주는 서비스</p>
             <p class="small_txt">아이들은 나만의 학습을 도와주는 성장판과 함께 공부하며 공부역량을 기릅니다. 눈높이러닝센터에 있는 서비스로 그 안에서 이루어지는 모든 학습과정은 데이터로 쌓이고 분석되어 3개월에 한 번씩 성장리포트로 제공됩니다. 성장리포트는 결과 중심의 성적표가 아닌 학습과정에 중심을 둔 성장표 입니다.</p>
           </div>
-          <!-- growth_slide -->
-          <div class="growth_slide">
-            <ul class="slide2">
-              <li class="child1"></li>
-              <li class="child2"></li>
-              <li class="child3"></li>
-            </ul>				
-          </div>
-          <!-- //growth_slide -->
         </div>        
       </div>
-      
+      <div class="growth-slider-wrap">
+        <div class="swiper-container growth-slide">
+          <ul class="swiper-wrapper">
+            <li class="swiper-slide"><img src="../../resource/img/growth_slimg.jpg" alt=""></li>
+            <li class="swiper-slide"><img src="../../resource/img/growth_slimg.jpg" alt=""></li>
+            <li class="swiper-slide"><img src="../../resource/img/growth_slimg.jpg" alt=""></li>
+          </ul>
+          <div class="growth-slider_arrow">
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+          </div>
+        </div>
+      </div>
       <div class="fullbg bg2">
         <div class="inner">
           <div class="growth-wrap">
             <h3 class="member_txt">4가지 공부 역량</h3>
             <p class="member_subtxt">4가지 공부역량을 알아서 잘하는 힘이 쑥쑥 길러집니다.</p>
             <div class="capability">
-              <div class="ico1">
-                <img src="../../resource/img/growth_ico1.png" alt="이해하는 힘">
-                <p class="ico_tit">이해하는 힘</p>
-                <p class="icon_con">학습한 내용을 제대로 이해하고 표현하는 힘</p>
-              </div>
-              <div class="ico2">
-                <img src="../../resource/img/growth_ico2.png" alt="실천하는 힘">
-                <p class="ico_tit">실천하는 힘</p>
-                <p class="icon_con">나의 학습계획을 세우고 그 계획을 밀리지 않고 해내는 힘</p>
-              </div>
-              <div class="ico3">
-                <img src="../../resource/img/growth_ico3.png" alt="집중하는 힘">
-                <p class="ico_tit">집중하는 힘</p>
-                <p class="icon_con">학습에 몰입하는 태도가 길러져 집중을 꾸준하게 할 수 있는 힘</p>
-              </div>
-              <div class="ico4">
-                <img src="../../resource/img/growth_ico4.png" alt="도약하는 힘">
-                <p class="ico_tit">도약하는 힘</p>
-                <p class="icon_con">내가 잘하는 것과 노력해야 하는 부분을 알고 앞으로 나갈 수 있는 힘</p>
-              </div>
-              
-
+              <img src="../../resource/img/capability.png" alt="">
             </div>
-
         </div>
 
         </div>
