--- a/noonno/work_list_ko.html
+++ b/noonno/work_list_ko.html
@@ -287,6 +287,48 @@
       <td class=""></td>
     </tr>
   </table>
+
+  <h2>회원서비스</h2>
+  <table>
+    <colgroup>
+      <col width="10%">
+      <col width="15%">
+      <col width="15%">
+      <col width="20%">
+      <col width="10%">
+      <col width="10%">
+      <col>
+    </colgroup>
+    <tbody>
+    <tr class="ok">
+      <td rowspan="3">회원서비스</td>
+      <td rowspan="">눈높이 365</td>
+      <td></td>
+      <td></td>
+      <td rowspan="3">member_service</td>
+      <td><a href="html/member_service/daekyo365.html" target="_blank">daekyo365</a></td>
+      <td class=""></td>
+    </tr>
+    <tr class="ok">
+
+      <td rowspan="">눈높이학습관</td>
+      <td></td>
+      <td></td>
+
+      <td><a href="html/member_service/learningcenter.html" target="_blank">learningcenter</a></td>
+      <td class=""></td>
+    </tr>
+    <tr class="ok">
+
+      <td rowspan="">눈높이성장판</td>
+      <td></td>
+      <td></td>
+
+      <td><a href="html/member_service/growth_plate.html" target="_blank">growth_plate</a></td>
+      <td class=""></td>
+    </tr>
+  </table>
+
   <h2>ETC</h2>
   <table>
     <colgroup>
