--- a/noonno/html/member_service/growth_plate.html
+++ b/noonno/html/member_service/growth_plate.html
@@ -154,6 +154,7 @@
             <div class="swiper-button-prev"></div>
           </div>
         </div>
+        <div class="bg1"></div>
       </div>
       <div class="fullbg bg2">
         <div class="inner">
