--- a/noonno/html/products/products_list.html
+++ b/noonno/html/products/products_list.html
@@ -248,7 +248,7 @@
                               <p class="tooltip-tit">선생님과 집에서</p>
                               <p class="tooltip-txt">전문화된 눈높이선생님이 집으로 방문하여 1:1 맞춤관리를 받는 학습시스템</p>
                               <div class="tooltip-line"></div>
-                              <a href="" alt="방문학습 안내 자세히보기">자세히보기<img src="../../resource/img/prd/tooltipmore.png" alt=""></a>
+                              <a href="" alt="온라인학습 안내 자세히보기">자세히보기<img src="../../resource/img/prd/tooltipmore.png" alt=""></a>
                             </div>
                           </div>
                         </div>
@@ -263,7 +263,7 @@
                             <p class="tooltip-tit">선생님과 집에서</p>
                             <p class="tooltip-txt">전문화된 눈높이선생님이 집으로 방문하여 1:1 맞춤관리를 받는 학습시스템</p>
                             <div class="tooltip-line"></div>
-                            <a href="" alt="방문학습 안내 자세히보기">자세히보기<img src="../../resource/img/prd/tooltipmore.png" alt=""></a>
+                            <a href="" alt="전화/화상 안내 자세히보기">자세히보기<img src="../../resource/img/prd/tooltipmore.png" alt=""></a>
                           </div>
                         </div>
                       </div>
@@ -278,7 +278,7 @@
                             <p class="tooltip-tit">선생님과 집에서</p>
                             <p class="tooltip-txt">전문화된 눈높이선생님이 집으로 방문하여 1:1 맞춤관리를 받는 학습시스템</p>
                             <div class="tooltip-line"></div>
-                            <a href="" alt="방문학습 안내 자세히보기">자세히보기<img src="../../resource/img/prd/tooltipmore.png" alt=""></a>
+                            <a href="" alt="학원/센터 안내 자세히보기">자세히보기<img src="../../resource/img/prd/tooltipmore.png" alt=""></a>
                           </div>
                         </div>
                       </div>
