plugin.js  헤드에 추가

--- a/noonno/html/member_service/daekyo365.html
+++ b/noonno/html/member_service/daekyo365.html
@@ -13,6 +13,7 @@
   <script type="text/javascript" src="../../resource/js/jquery-1.8.2.min.js"></script>
   <script type="text/javascript" src="../../resource/js/jquery-ui.min.js"></script>
   <script type="text/javascript" src="../../resource/js/design_common.js"></script>
+  <script type="text/javascript" src="../../resource/js/plugin.js"></script>
   <script type="text/javascript" src="../../resource/js/board_event.js" ></script>
   <script type="text/javascript" src="../../resource/js/member.js" ></script>
 </head>
