--- a/noonno/work_list_ko.html
+++ b/noonno/work_list_ko.html
@@ -181,7 +181,7 @@
       <col>
     </colgroup>
     <tbody>
-    <tr class="ok">
+    <tr class="">
       <td>눈높이올림피아드</td>
       <td rowspan="0">눈높이올림피아드</td>
       <td></td>
@@ -300,7 +300,7 @@
       <col>
     </colgroup>
     <tbody>
-    <tr class="ok">
+    <tr class="">
       <td rowspan="3">회원서비스</td>
       <td rowspan="">눈높이 365</td>
       <td></td>
